# wit-resource-fail

./: Cargo.toml  README.md  build.rs  test.wasm
examples/test-host/: Cargo.toml
examples/test-host/src/: main.rs
examples/test-plugin/: Cargo.toml
examples/test-plugin/src/: lib.rs
src/: export_plugin.rs  lib.rs
wit/: plugin.wit
