workspace = { members = [ "examples/test-host","examples/test-plugin"] }
[package]
name = "wit-resource-fail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen" }
