[package]
name = "test-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { version = "16.0.0", features = ['component-model'] }
wasmtime-wasi = { version = "16.0.0", features = ['preview2'] }
slab = "0.4.9"
async-trait = "0.1.77"
smol = "2.0.0"
